<resources>
    <string name="app_name">MoreControls</string>
    <string name="page_title">Hello World!</string>
    <string name="good_programmer_checkbox_text">Check if you\'re a good programmer</string>
    <string name="do_it">Do It !!</string>
    <string name="you_get_one_grand">Congrats. You get $1000</string>
    <string name="you_get_money">Contrats. You get $%d</string>
    <string name="you_have_nothing">You have nothing</string>
    <string name="good_news">Something good is coming</string>
    <string name="bad_news">Sorry to say this...</string>
    <string name="your_name">Your Name:</string>
    <string name="main_msg_fmt">Hello %s, %s</string>
    <string name="noname">NoName</string>
    <string name="name_length_msg">Your name is %d character long.</string>
    <string name="apply_immediately">Applies immediately</string>
</resources>