<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_title"
        android:textSize="20sp"
        android:id="@+id/pageTitleTextView"
        />
    <TextView
        android:id="@+id/yourNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:layout_marginVertical="10dp"
        android:layout_below="@id/pageTitleTextView"
        />
    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/yourNameTextView"
        android:layout_alignBaseline="@id/yourNameTextView"
        android:hint="@string/noname"
        />
    <CheckBox
        android:id="@+id/goodProgrammerCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/yourNameTextView"
        android:text="@string/good_programmer_checkbox_text"
        android:onClick="onCheckGoodProgrammer"
        />
    <Button
        android:id="@+id/doItButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_it"
        android:layout_below="@id/goodProgrammerCheckbox"
        android:onClick="onBtnDoIt"
        />
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/immediateSwitch"
        android:text="@string/apply_immediately"
        android:layout_below="@id/doItButton"
        android:padding="8dp"
        />


</RelativeLayout>